Add missing display of added/removed shares in the investment transaction report

BUG:498033
FIXED-IN:5.2